Actualizacion terminal y compilacion y ejecucion

--- a/github.html
+++ b/github.html
@@ -10,6 +10,7 @@
     <header>
         <h1>DOCUMENTACION DE PROGRAMACION - ABP</h1>
         <h3><a href="github.html">GitHub</a></h3>
+        <h3>Compilación</h3>
         <h3>Variables</h3>
         <h3>Funciones</h3>
         <h3>Debugger</h3>
