--- a/terminal.html
+++ b/terminal.html
@@ -10,31 +10,31 @@
     <header>
         <h1>DOCUMENTACION DE PROGRAMACION - ABP</h1>
         <h3><a href="github.html">GitHub</a></h3>
-        <h3><a href="terminal.html">Terminal</a></h3>
+        <h3>Terminal</h3>
         <h3>Variables</h3>
         <h3>Funciones</h3>
         <h3>Debugger</h3>
     </header>
 
-    <h2>COMPILACION</h2>
-    <ol>
-        <li>mkdir build</li>
+    <h2>TERMINAL - COMANDOS UTILES</h2>
+    <ul>
+        <li>touch 'nombre del archivo'</li>
         <p>
-            Crea la carpeta build
+            Crea un archivo con el nombre 'nombre del archivo'
         </p>
-        <li>cmake ..</li>
+        <li>sudo pacman -Syu</li>
         <p>
-            Introduce en la carpeta build todos los archivos necesarios para poder ejecutar make.
+            Actualiza el sistema
         </p>
-        <li>make</li>
+        <li>xdg-open .</li>
         <p>
-            Con este comando se ejecuta el make preprocesando, compilando y linkando. Crea el ejecutable.  
+            Este comando se utiliza para abrir el Explorador de Archivos en la carpeta actudesde la terminal.
         </p>
-        <li>./Game</li>
+        <li>htop -> sudo pacman -S htop</li>
         <p>
-            Ejecuta el ejecutable para la ejecución.
+            Administrador de tareas.
         </p>
-    </ol>
+    </ul>
     
     
 </body>
